--- a/FinalProject.html
+++ b/FinalProject.html
@@ -281,6 +281,8 @@ accuracy2
 final_predict
 </code></pre>
 
+<p>The estimated error rate is less than 1%.</p>
+
 <h2>APPENDIX</h2>
 
 <p>Decision tree plot</p>
